--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -21,9 +21,9 @@
     margin: 10px 0px;
     overflow-x: scroll;
 }
-.explore-menu-list::-webkit-scrollbar{
+/* .explore-menu-list::-webkit-scrollbar{
     display: none;
-}
+} */
 .explore-menu-list-item img {
     width: 7.5vw;
     min-width: 80px;
@@ -46,4 +46,10 @@
 .explore-menu-list-item .active{
     border: 4px solid tomato;
     padding: 2px;
+}
+@media (max-width:1050px) {
+    .explore-menu-text{
+        max-width: 100%;
+        font-size: 14px;
+    }
 }
