--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
     gap: 20px;
     padding: 20px 8vw;
     padding-top: 80px;
+    margin-top: 100px;
 }
 .footer-content{
     width: 100%;
@@ -27,10 +28,14 @@
 }
 .footer-content-right h2, .footer-content-center h2{
     color: white;
+    font-size: max(1vw, 18px);
 }
 .footer-social-icons{
     width: 45px;
     margin-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
 }
 .footer hr{
     width: 100%;
@@ -38,5 +43,15 @@
     margin: 20px 0;
     background-color: grey;
     border: none;
+}
+@media (max-width:1050px) {
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
 }
 
